# yolo-re

./: .gitignore  README.md  pyproject.toml
configs/data/: coco.yaml
configs/models/: gelan-c.yaml  yolov9-c.yaml
configs/train/: default.yaml
docs/: design.md
scripts/: convert_weights.py  detect.py  download_coco128.py  train.py  train_modal.py  validate_equivalence.py  visualize_augment.py
src/yolo/: __init__.py
src/yolo/blocks/: __init__.py  auxiliary.py  bottleneck.py  common.py  conv.py  csp.py  downsample.py  gelan.py  sppelan.py
src/yolo/data/: __init__.py  augment.py  config.py  dataset.py  transforms.py
src/yolo/eval/: __init__.py  evaluator.py  metrics.py
src/yolo/heads/: __init__.py  anchor.py  detect.py  dfl.py
src/yolo/loss/: __init__.py  assigner.py  bbox.py  iou.py  tal.py
src/yolo/model/: __init__.py  config.py  model.py  parser.py  registry.py
src/yolo/train/: __init__.py  config.py  ema.py  scheduler.py  trainer.py
src/yolo/utils/: __init__.py  device.py  nms.py  visualize.py
tests/: test_blocks.py  test_data.py  test_heads.py  test_loss.py  test_model.py  test_train.py  test_weight_equivalence.py
